[gd_scene load_steps=12 format=2]

[ext_resource path="res://Utility/Hurtbox.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Bat.gd" type="Script" id=3]
[ext_resource path="res://Action RPG Resources/Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Utility/Hitbox.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.38516

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 3.16228

[sub_resource type="CircleShape2D" id=5]
radius = 6.08276

[sub_resource type="CircleShape2D" id=6]
radius = 48.0416

[node name="Bat" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="Bat" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="SmallShadow" type="Sprite" parent="Bat"]
position = Vector2( 0, 9 )
texture = ExtResource( 4 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1, -4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fly = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 1, -4 )
shape = SubResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 6 )

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_ChaseTimer_timeout"]
